# crate-git-revision

./: Cargo.toml  Makefile  README.md
src/: lib.rs  test.rs
