[package]
name = "crate-git-revision"
description = "Embed git revision into crates built and published."
homepage = "https://github.com/stellar/crate-git-revision"
repository = "https://github.com/stellar/crate-git-revision"
authors = ["Stellar Development Foundation <info@stellar.org>"]
readme = "README.md"
license = "Apache-2.0"
version = "0.0.6"
edition = "2021"
rust-version = "1.66"

[dependencies]
serde = "1.0.82"
serde_derive = "1.0.82"
serde_json = "1.0.82"

[dev_dependencies]
regex = "1.6.0"
tempfile = "3.3.0"
